exercises/gatekeeper/gator/test-success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-failure
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
